force-app/main/default/objects/Dealer__c/Dealer__c.object-meta.xml
<CustomObject>
    <label>Dealer</label>
    <nameField>
        <label>First Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dealers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>