force-app/main/default/objects/Dealer__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <label>Company Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>