force-app/main/default/objects/Dealer__c/fields/Current_Rec_Id__c.field-meta.xml
<CustomField>
    <fullName>Current_Rec_Id__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Rec Id</label>
    <type>Text</type>
</CustomField>