force-app/main/default/objects/Dealer__c/fields/Do_you_have_Godown__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_Godown__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you have Godown</label>
    <type>Checkbox</type>
</CustomField>