force-app/main/default/objects/Dealer__c/fields/Do_you_have_Registered_firm__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_Registered_firm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you have Registered firm</label>
    <type>Checkbox</type>
</CustomField>