force-app/main/default/objects/Dealer__c/fields/Email_Verification__c.field-meta.xml
<CustomField>
    <fullName>Email_Verification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Verification</label>
    <type>Checkbox</type>
</CustomField>