force-app/main/default/objects/Dealer__c/fields/Files_Uploaded_Requested__c.field-meta.xml
<CustomField>
    <fullName>Files_Uploaded_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Files Uploaded Requested</label>
    <type>Checkbox</type>
</CustomField>