force-app/main/default/objects/Dealer__c/fields/Godown_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Godown_Capacity__c</fullName>
    <label>Godown Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>