force-app/main/default/objects/Dealer__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Awaiting</fullName>
            </value>
            <value>
                <fullName>Approved_by_Manager</fullName>
                <label>Approved by Manager</label>
            </value>
            <value>
                <fullName>Approved_by_Verification_Team</fullName>
                <label>Approved by Verification Team</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>verified  email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>