force-app/main/default/objects/Dealer__c/fields/Verification_Comment__c.field-meta.xml
<CustomField>
    <fullName>Verification_Comment__c</fullName>
    <label>Verification Comment</label>
    <type>TextArea</type>
</CustomField>