force-app/main/default/objects/Dealer__c/fields/Verification_Link__c.field-meta.xml
<CustomField>
    <fullName>Verification_Link__c</fullName>
    <formula>HYPERLINK(
  &quot;https://digikas-2e-dev-ed.develop.my.salesforce-sites.com/emailverificationsmseals/apex/EmailVerificationControllerVF?token=&quot; &amp; Verification_Token__c,
  &quot;Click here to verify&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verification Link</label>
    <type>Text</type>
</CustomField>