force-app/main/default/objects/Dealer__c/fields/Verification_Status_of_Mail__c.field-meta.xml
<CustomField>
    <fullName>Verification_Status_of_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verification Status of Mail</label>
    <type>Checkbox</type>
</CustomField>