force-app/main/default/objects/Dealer__c/fields/Verification_Token__c.field-meta.xml
<CustomField>
    <fullName>Verification_Token__c</fullName>
    <label>Verification Token</label>
    <length>50</length>
    <type>Text</type>
</CustomField>