force-app/main/default/objects/Dealer__c/listViews/Verification_Team_Dealer.listView-meta.xml
<ListView>
    <fullName>Verification_Team_Dealer</fullName>
    <filterScope>Queue</filterScope>
    <label>Verification Team</label>
    <queue>Verification_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>